# prl_assets

./: .gitignore  LICENSE  README.md  pyproject.toml  test_can_render.py
scripts/: inspect_object.py  recenter_mesh.py  render_objects.py  validate_objects.py  viz_all_objects.py  viz_stacking_demo.py
src/prl_assets/: __init__.py
src/prl_assets/objects/ada_table/: ada_table.xml  meta.yaml
src/prl_assets/objects/can/: can.xml  can_visual.stl  meta.yaml
src/prl_assets/objects/cracker_box/: cracker_box.xml  meta.yaml
src/prl_assets/objects/fuze_bottle/: fuze_bottle.xml  meta.yaml
src/prl_assets/objects/gelatin_box/: gelatin_box.xml  meta.yaml
src/prl_assets/objects/herring_tin/: herring_tin.xml  meta.yaml
src/prl_assets/objects/lunchbox/: lunchbox.xml  meta.yaml
src/prl_assets/objects/notebook/: meta.yaml  notebook.xml
src/prl_assets/objects/plastic_bowl/: material.mtl  meta.yaml  plastic_bowl.xml
src/prl_assets/objects/plastic_glass/: material.mtl  meta.yaml  plastic_glass.xml
src/prl_assets/objects/plastic_plate/: material.mtl  meta.yaml  plastic_plate.xml
src/prl_assets/objects/pocky_box/: meta.yaml  pocky_box.xml
src/prl_assets/objects/pop_tarts/: meta.yaml  pop_tarts.xml
src/prl_assets/objects/pop_tarts_case/: meta.yaml  pop_tarts_case.xml  pop_tarts_case_visual.mtl
src/prl_assets/objects/potted_meat_can/: meta.yaml  potted_meat_can.xml
src/prl_assets/objects/recycle_bin/: meta.yaml  recycle_bin.xml
src/prl_assets/objects/spam_can/: meta.yaml  spam_can.xml
src/prl_assets/objects/sugar_box/: meta.yaml  sugar_box.xml
src/prl_assets/objects/wicker_tray/: material.mtl  meta.yaml  wicker_tray.xml
src/prl_assets/objects/yellow_tote/: meta.yaml  yellow_tote.xml
tests/: __init__.py  test_assets.py
