[project]
name = "prl_assets"
version = "0.1.0"
description = "Reusable manipulation objects (cans, bins, tableware, containers) for MuJoCo"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Siddhartha Srinivasa", email = "siddhartha.srinivasa@gmail.com"},
]
maintainers = [
    {name = "Siddhartha Srinivasa", email = "siddhartha.srinivasa@gmail.com"},
]
dependencies = [
    "fast-simplification>=0.1.13",
    "trimesh>=4.11.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mujoco>=3.0",
    "pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prl_assets"]

[project.urls]
Homepage = "https://github.com/personalrobotics/prl_assets"
Repository = "https://github.com/personalrobotics/prl_assets"
Issues = "https://github.com/personalrobotics/prl_assets/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/prl_assets/__init__.py" = ["F401"]
